# GithubActionsPractice

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml  second.yaml
include/: adder.hpp
src/: CMakeLists.txt  adder.cpp
tests/: CMakeLists.txt  basic_test.cpp
